Commit publication and people
Changed color of '#content a' in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1631,7 +1631,8 @@ input, select, textarea {
 		}
 
 		#content a {
-			color: #ED391B;
+			color: #004D65;
+            /* color: #ED391B;   ! Modified by KTS */
 		}
 
 		#content header {
