Commit to changes in order of contents

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1678,6 +1678,10 @@ input, select, textarea {
 			margin: 0 0 2em 0;
 		}
 
+        #content .people-list li {
+            border-bottom: solid 1px #e2e6e8;
+        }
+
 		#content .quote-list li {
 			border-bottom: solid 1px #e2e6e8;
 		}
@@ -2012,7 +2016,11 @@ input, select, textarea {
 				padding: 0.75em 0 0.75em 0;
 			}
 
-			.quote-list li p {
+            .people-list li {
+                font-size: 0.8em;
+            }
+
+            .quote-list li p {
 				margin-bottom: 0.5em;
 			}
 
