--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1405,6 +1405,13 @@ input, select, textarea {
                 font-weight: bold;
             }
 
+/* Indented reference listing: added by KTS */
+    .publication {
+        margin: 0.0px 0.0px 6.0px 40.0px;
+        text-indent: -40.0px;
+    }
+/* --- */
+
     .people-list li {
         padding: 1em 0 1em 0;
         overflow: hidden;
@@ -1630,7 +1637,8 @@ input, select, textarea {
 /* Features */
 
 	#features {
-		background: #353D40 url("images/bg02.jpg");
+		/*background: #353D40 url("images/bg02.jpg");*/
+        background: #084A5E url("images/bg02.png");
 		border-bottom: solid 1px #272e31;
 		padding: 45px 0 45px 0;
 		text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
@@ -1887,7 +1895,7 @@ input, select, textarea {
 				width: 100%;
 				z-index: 10001;
 				color: #fff;
-				background: url("images/bg04.jpg");
+				background: url("images/bg04jpg.png");
 				box-shadow: inset 0px -20px 70px 0px rgba(200, 220, 245, 0.1), inset 0px -1px 0px 0px rgba(255, 255, 255, 0.1), 0px 1px 7px 0px rgba(0, 0, 0, 0.6);
 				text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
 			}
@@ -1960,7 +1968,7 @@ input, select, textarea {
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				background: url("images/bg04.jpg");
+				background: url("images/bg04jpg.png");
 				box-shadow: inset -1px 0px 0px 0px rgba(255, 255, 255, 0.25), inset -2px 0px 25px 0px rgba(0, 0, 0, 0.5);
 				text-shadow: -1px -1px 1px black;
 			}
